# web

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/: stopwords.txt
src/: context_provider.cpp  context_provider.h  index_manager.cpp  index_manager.h  main.cpp  page_retriever.cpp  page_retriever.h  search.h  webserver.h
